--- a/15-dom1.html
+++ b/15-dom1.html
@@ -29,12 +29,11 @@ elH1.innerHTML="Hello <em> Javascript</em>"//javascripti italik yazdirdik
 const allH1=document.querySelectorAll("h1");
     console.log(allH1);//NodeList(2) [h1, h1]
 
-    const allLi= document.querySelectorAll(".menu li");//menu icindeki li ler demek
+    const allLi= document.querySelectorAll(".menu li");//menu icindeki li ler demek   
     console.log(allLi);//NodeList(3) [li, li, li]
 
-
 const elHome = document.querySelector(".menu li:first-child");//Home u sectik
-elHome.innerText= "Ana Sayfa"
+elHome.innerText= "Ana Sayfa";// DOM manupilation yaptik
 
 const elDesc= document.querySelector(".desc");//clas adi desc olani sectik
 
