--- a/asset/js/day09/57-map.html
+++ b/asset/js/day09/57-map.html
@@ -9,7 +9,7 @@
     <script>
       const nums = [12, 45, 1, 56, 3, 6, 87, 3];
       let newNums = [];
-
+// map orjinal diziyi bozmaz!!!
     newNums=  nums.map((num) => num * 5);
       console.log(newNums);
       console.log(nums);
