--- a/asset/js/day09/60-filter.html
+++ b/asset/js/day09/60-filter.html
@@ -16,7 +16,7 @@
         console.log(filteredArr);
       };
       filterStudents("A");
-      filterStudents("e");
+      filterStudents("eb");
       filterStudents("Ne");
     </script>
   </body>
