--- a/asset/js/day09/56-for-each.html
+++ b/asset/js/day09/56-for-each.html
@@ -6,12 +6,13 @@
     <title>Document</title>
 </head>
 <body>
-    <select id="ddlAnimals"></select>
+  
     <script>
         const nums= [12,45,1,56,3,6,87,3];
         const newNums=[];
 
-        nums.forEach((num)=>newNums.push(num*5));// suslu parantez acmaya gerek yok.
+        nums.forEach((num)=>newNums.push(num*5));// suslu parantez acmaya gerek yok. push ile rakamlari ekliyorum.
+        console.log(nums);
         console.log(newNums);
      
     </script>
