--- a/asset/js/day09/59-map-practice.html
+++ b/asset/js/day09/59-map-practice.html
@@ -8,7 +8,7 @@
   <body>
     <script>
       const pricesTL = [1233, 3432, 6433, 7785, 8864];
-      // const newPrices = pricesTLmmap((price) => {
+      // const newPrices = pricesTL.map((price) => {
       //   if (price > 100) {
       //     return price * 1.1;
       //   } else {
