--- a/asset/js/day09/62-filter-practice.html
+++ b/asset/js/day09/62-filter-practice.html
@@ -11,8 +11,9 @@
     </select>
     <table id="details">
       <tr><th>Capital</th><td></td></tr>
-      <tr><th>Money</th><td></td></tr>
       <tr><th>Languages</th><td></td></tr>
+      <tr><th>Region</th><td></td></tr>
+      <tr><th>Currency</th><td></td></tr>
     </table>
 
     <script type="module" src="./62-filter-practice.js">
