--- a/asset/js/day11/74-dom-5.html
+++ b/asset/js/day11/74-dom-5.html
@@ -4,26 +4,29 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-  
   </head>
   <body>
-<ul id="list">
-  <li>Ali</li>
-  <li>Veli</li>
-  <li>Ayse</li>
-  <li>Fatma</li>
-</ul>
+    <ul id="list">
+      <li>Ali</li>
+      <li>Veli</li>
+      <li>Ayse</li>
+      <li>Fatma</li>
+    </ul>
 
     <script>
- const newLi=document.createElement("li");
- newLi.innerText="Ebubekir";
- newLi.classList.add('bg-primary');
- newLi.setAttribute("data-id",23);
+      const newLi = document.createElement("li");
+      newLi.innerText = "Ebubekir";
+      newLi.classList.add("bg-primary");
+      newLi.setAttribute("data-id", 23);
+     
+      const newLi2 = document.createElement("li");
+      newLi2.innerText = "Ebrar";
+      newLi2.classList.add("bg-primary");
+      newLi2.setAttribute("data-id", 23);
 
- document.querySelector("#list").appendChild(newLi);
- document.querySelector("#list").append(newLi);
- document.querySelector("#list").prepend(newLi);
-
+      //document.querySelector("#list").appendChild(newLi);
+      document.querySelector("#list").append(newLi);
+      document.querySelector("#list").prepend(newLi2);
     </script>
   </body>
 </html>
