--- a/asset/js/day01/05-comment.html
+++ b/asset/js/day01/05-comment.html
@@ -1,23 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Comment</title>
+  </head>
+  <body>
     <h1>Hello World</h1>
     <script>
-    // yorum satiri
+      // yorum satiri
 
-    /*
+      /*
      coklu yorum satiri ******** 2.07
      */
 
-   alert("Silmeye yetkiniz yok");
-   confirm("Silmek istediginizden emin misiniz?");
-   prompt("Adinizi giriniz")
-
+      alert("Silmeye yetkiniz yok");
+      confirm("Silmek istediginizden emin misiniz?");
+      prompt("Adinizi giriniz");
     </script>
-</body>
+  </body>
 </html>
