--- a/asset/js/day01/01-internal-script.html
+++ b/asset/js/day01/01-internal-script.html
@@ -1,21 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>Hello World</h1>
-    <!--sadece bu sayfada calisan javascript kodu yazacaksak 
-    script tagini acip arasina js kodlarini yazariz
-    console.log ta kullanici birsey gormez sadece console da biz goruruz
-    console.log ("Hello world");
-    console.warn("Sayilar esit"); console'a sari yazdirir basinda unlem isareti olur
-    console.error(ID alani bos birakilamaz); kritik hata olabilecek seylerde bizim ya da developerin dikkatini cekmek icin kullanilir kirmizi yazdirir
--->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Internal Script</title>
+  </head>
+  <body>
+    <h1>Hello javascript</h1>
+
     <script>
-        console.log("Bu bir internal script'tir")
+      console.log("Bu bir internal script'tir");
+
+      //eger <script src="asset/js/script.js"> seklinde yazarsak bu da external scriptir!!!Ayri dosyalari buraya baglariz
     </script>
-</body>
+  </body>
 </html>
