--- a/asset/js/day01/03-internal-script .html
+++ b/asset/js/day01/03-internal-script .html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Log Warn Error</title>
+  </head>
+  <body>
     <h1>Hello World</h1>
     <!--sadece bu sayfada calisan javascript kodu yazacaksak 
-    script tagini acip arasina js kodlarini yazariz
+    script tagini acip body tag'i kapanmadan arasina js kodlarini yazariz
     console.log ta kullanici birsey gormez sadece console da biz goruruz
     console.log ("Hello world");
     console.warn("Sayilar esit"); console'a sari yazdirir basinda unlem isareti olur
@@ -16,11 +16,9 @@
                    developerin dikkatini cekmek icin kullanilir kirmizi yazdirir
 -->
     <script>
-        console.log("Bu bir internal script'tir")
-          console.warn("Bu bir internal script'tir")
-          console.error("Bu bir internal script'tir")
-
-
+      console.log("Bu bir internal script'tir");
+      console.warn("Bu bir internal script'tir");
+      console.error("Bu bir internal script'tir");
     </script>
-</body>
+  </body>
 </html>
