--- a/asset/js/day01/04-alert-confirm-prompth .html
+++ b/asset/js/day01/04-alert-confirm-prompth .html
@@ -1,21 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>Hello World</h1>
-    <!--alert=> kullaniciya bilgi vermek
-        confirm=>kullanicidan bilgi almak icin
-        prompt=> kulanicidan bilgi almak icin kullanilir
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Alert Confirm Prompt</title>
+  </head>
+  <body>
+    <h1>Alert Prompt Confirm</h1>
+    <!--alert=> kullaniciya bilgi vermek, yada uyari yapmak icin kullanilir.
+        confirm=>kullanicidan bilgi almak icin, soru sormak icin kullanilir.
+        prompt=> kulanicidan bilgi almak icin kullanilir.
      -->
     <script>
-   alert("Silmeye yetkiniz yok");
-   confirm("Silmek istediginizden emin misiniz?");
-   prompt("Adinizi giriniz")
-
+      alert("Silmeye yetkiniz yok");
+      confirm("Silmek istediginizden emin misiniz?");
+      prompt("Adinizi giriniz");
     </script>
-</body>
+  </body>
 </html>
