--- a/asset/js/day01/06-data-types.html
+++ b/asset/js/day01/06-data-types.html
@@ -1,35 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Data Types</title>
+  </head>
+  <body>
     <script>
-var adi="Ayse"
-console.log(adi); //Ayse
-console.log(typeof(adi)); //string
+      var adi = "Ayse";
+      console.log(adi); //Ayse
+      console.log(adi,typeof (adi)); //Ayse string
+      console.log(typeof adi); //string
 
-var yas = 20
-console.log(yas); //20
-console.log(typeof(yas)); //number
+      var yas = 20;
+      console.log(yas); //20
+      console.log(typeof yas); //number
 
-var student= {};// obje olusturduk
-console.log(typeof(student)); //object
+      var student = {}; // obje olusturduk
+      console.log(typeof student); //object
 
-var salary;
-console.log(salary);  //undefined
-console.log(typeof(salary)); //undefined
+      var salary;
+      console.log(salary); //undefined
+      console.log(typeof salary); //undefined
 
-var yas = 35
-console.log(yas); //35 ayni degisken ismi farkli yerde yeniden tanimlanabilir
+      var yas = 35;
+      console.log(yas); //35 ayni degisken ismi farkli yerde yeniden tanimlanabilir
 
-var yas = "35"
-console.log(yas);//35 hata vermez string olarak kabul eder var degiskeni surekli degistirebiliriz
-
-
-
+      var yas = "35";
+      console.log(yas); //35 hata vermez string olarak kabul eder var degiskeni surekli degistirebiliriz
     </script>
-</body>
+  </body>
 </html>
