--- a/asset/js/day03/17-dom3.html
+++ b/asset/js/day03/17-dom3.html
@@ -1,29 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <style>
+    <style></style>
+  </head>
+  <body>
+    <input
+      type="text"
+      id="txtName"
+      value="Ayse Hanim"
+    /><!--icindeki texti okumak icin value-->
 
+    <h3 id="lblMesaj">...</h3>
+    <!--icini okumak icin innerText-->
 
-    </style>
-</head>
-<body>
-   <input type="text" id="txtName" value="Ayse Hanim"/><!--icindeki texti okumak icin value--> 
+    <script>
+      const txtName = document.querySelector("#txtName");
+      const lblMesaj = document.querySelector("#lblMesaj");
 
-<h3 id="lblMesaj">...</h3> <!--icini okumak icin innerText-->
-
-  <script>
-const txtName= document.querySelector("#txtName");
-const lblMesaj=document.querySelector("#lblMesaj")
-
-lblMesaj.innerText=`Merhaba ${txtName.value} ` //yoruma alsaydik sadece h3 olan yer  ... olurdu live server
-
-
-
-
+      lblMesaj.innerText = `Merhaba ${txtName.value} `; //yoruma alsaydik sadece h3 olan yer  ... olurdu live server
     </script>
-    
-</body>
+  </body>
 </html>
