--- a/asset/js/day03/19.dom5.html
+++ b/asset/js/day03/19.dom5.html
@@ -1,27 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge/">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge/" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <style>
+    <style></style>
+  </head>
+  <body>
+    <input type="text" id="txtName" value="Ayse Hanim" oninput="sayHello()" />
 
+    <h3 id="lblMessage">...</h3>
 
-    </style>
-</head>
-<body>
-   <input type="text" id="txtName" value="Ayse Hanim" oninput="sayHello()"/>
-
-<h3 id="lblMessage">...</h3> 
-
-  <script>
-    const lblMessage = document.querySelector("#lblMessage");
-    const txtName= document.querySelector("#txtName")
-function sayHello() {
- lblMessage.innerHTML = txtName.value;
-}
+    <script>
+      const lblMessage = document.querySelector("#lblMessage");
+      const txtName = document.querySelector("#txtName");
+      function sayHello() {
+        lblMessage.innerHTML = txtName.value;
+      }
     </script>
-    
-</body>
+  </body>
 </html>
