--- a/asset/js/day03/21-if-practice.html
+++ b/asset/js/day03/21-if-practice.html
@@ -1,28 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<body>
-  <input type="text" id="txtPrice">
-  <button onclick="calculate()">Calculate</button>
-  <h3 id="result"></h3>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+  </head>
+  <body>
+    <input type="text" id="txtPrice" />
+    <button onclick="calculate()">Calculate</button>
+    <h3 id="result"></h3>
 
+    <script>
+      function calculate() {
+        let price = document.querySelector("#txtPrice").value;
 
-<script>
-  function calculate(){
-    let price=document.querySelector('#txtPrice').value;
-
-  if(price>500){
-    price=price - price * 10/100;
-    //price= price* 0.9
-  }
-  document.querySelector('#result').innerHTML=`$${price}`;
-  }
-//ders 3 =>2.21
-
-</script>
-</body>
+        if (price > 500) {
+          price = price - (price * 10) / 100;
+          //price= price* 0.9
+        }
+        document.querySelector("#result").innerHTML = `$${price}`;
+      }
+      //ders 3 =>2.21
+    </script>
+  </body>
 </html>
