--- a/asset/js/day05/32-nullish-coalacsing.html
+++ b/asset/js/day05/32-nullish-coalacsing.html
@@ -1,24 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<body >
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+  </head>
+  <body>
+    <button onclick="setUserInfo()">Click Me</button>
 
-<button onclick="setUserInfo()">Click Me</button>
+    <h3 id="result"></h3>
 
-  <h3 id="result"></h3>
-
-<script>
- 
- const x="";
- alert(x || "Anonymus"); //=> Anonymus yazar
- alert(x ?? "Anonymus"); //=> hicbirsey cikmaz
-
-
-
-</script>
-</body>
+    <script>
+      const x = "";
+      alert(x || "Anonymus"); //=> Anonymus yazar
+      alert(x ?? "Anonymus"); //=> hicbirsey cikmaz
+    </script>
+  </body>
 </html>
