--- a/asset/js/day05/33-nullish-coalacsing -practice.html
+++ b/asset/js/day05/33-nullish-coalacsing -practice.html
@@ -1,22 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<body >
-  <button onclick="alanHesapla()">Click Me</button> <!-- 0 -->
-  <button onclick="alanHesapla(3)">Click Me</button> <!-- 0 -->
-  <button onclick="alanHesapla(5,7)">Click Me</button><!-- 35 -->
-  <h3 id="result"></h3>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+  </head>
+  <body>
+    <button onclick="alanHesapla()">Click Me</button>
+    <!-- 0 -->
+    <button onclick="alanHesapla(3)">Click Me</button>
+    <!-- 0 -->
+    <button onclick="alanHesapla(5,7)">Click Me</button
+    ><!-- 35 -->
+    <h3 id="result"></h3>
 
-<script>
-function alanHesapla(a,b){
-  const result =(a ?? 0) *(b ?? 0);
-  document.querySelector("#result").innerHTML=result;
+    <script>
+      function alanHesapla(a, b) {
+        const result = (a ?? 0) * (b ?? 0);
+        document.querySelector("#result").innerHTML = result;
 
-/*
+        /*
 ES5 ve oncesi kullanilan yontem 
   if(a===null || a=== undefined){
   a=0;
@@ -26,10 +29,7 @@ ES5 ve oncesi kullanilan yontem
 const result = a * b;
 
 */
-}
-
-
-
-</script>
-</body>
+      }
+    </script>
+  </body>
 </html>
