--- a/asset/js/day05/35-while-practice.html
+++ b/asset/js/day05/35-while-practice.html
@@ -16,25 +16,21 @@
 
     <script>
       function calculate() {
-let num= document.querySelector("#txtNumber").value;
-let total = 0;
-num=isNaN(num+1) ? 0 : num;
-num=Math.abs(num);
-//1647
-//164
-//16
-//1
+        let num = document.querySelector("#txtNumber").value;
+        let total = 0;
+        num = isNaN(num + 1) ? 0 : num;
+        num = Math.abs(num);
+        //1647
+        //164
+        //16
+        //1
 
-while (num>0) {
-
-const digit=num % 10
-  total+=digit;
- num = Math.floor(num /10);
-}
-alert(total);
-
-
-
+        while (num > 0) {
+          const digit = num % 10;
+          total += digit;
+          num = Math.floor(num / 10);
+        }
+        alert(total);
       }
     </script>
   </body>
