--- a/asset/js/day01/06-data-types.html
+++ b/asset/js/day01/06-data-types.html
@@ -9,12 +9,14 @@
     <script>
       var adi = "Ayse";
       console.log(adi); //Ayse
-      console.log(adi,typeof (adi)); //Ayse string
+      console.log(adi, typeof adi); //Ayse string
       console.log(typeof adi); //string
+      console.log(adi, typeof adi, isNaN); //Ayse string true yazar
 
       var yas = 20;
       console.log(yas); //20
       console.log(typeof yas); //number
+      console.log(yas, typeof yas, isNaN(yas)); //20 number false yazar
 
       var student = {}; // obje olusturduk
       console.log(typeof student); //object
