--- a/asset/js/day02/08-aritmetic-operators.html
+++ b/asset/js/day02/08-aritmetic-operators.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Aritmetik Operators</title>
   </head>
   <body>
     <script>
@@ -27,6 +27,12 @@
 
       const result3 = "5" + 45 + 10; //54510
       console.log(result3);
+      let result = "asdc" + 45 - 10; //NaN
+      console.log(result);
+      result = 45 - "5" + 10; //50
+      console.log(result);
+      result = 45 - "5" ; //40 cikartma yapabiliyor!!!
+      console.log(result);
     </script>
   </body>
 </html>
