--- a/asset/js/day11/74-dom-5.html
+++ b/asset/js/day11/74-dom-5.html
@@ -7,10 +7,12 @@
   </head>
   <body>
     <ul id="list">
+      <!-- prepend -->
       <li>Ali</li>
       <li>Veli</li>
       <li>Ayse</li>
       <li>Fatma</li>
+      <!-- append -->
     </ul>
 
     <script>
