--- a/asset/js/day02/11-increment-decrement.html
+++ b/asset/js/day02/11-increment-decrement.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Increment - Decrement</title>
   </head>
   <body>
     <script>
@@ -14,7 +14,7 @@
 
       const x = 3;
       let k = x++; //hata burada
-      console.log(k); //Uncaught TypeError: Assignment to constant variable.
+      console.log(k); //Uncaught TypeError: Assignment to constant variable. Const degeri degistirilemez
     </script>
   </body>
 </html>
