--- a/asset/js/day02/12-comperation.html
+++ b/asset/js/day02/12-comperation.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Comperation Operators</title>
   </head>
   <body>
     <script>
@@ -11,16 +11,16 @@
       let y = 40;
       let z = "30";
       const comperation1 = x == y;
-      console.log(comperation1);
+      console.log(comperation1);//false
 
       const comperation2 = x == z; //sadece degerleri kontrol ediyor
-      console.log(comperation2);
+      console.log(comperation2);//true
 
       const comperation3 = x === z; //deger ve data tipini kontrol ediyor
-      console.log(comperation3);
+      console.log(comperation3);//false
 
       const comperation4 = x < "a"; //kontrol edemedigi seylerde false doner
-      console.log(comperation4);
+      console.log(comperation4);//false 
     </script>
   </body>
 </html>
