--- a/asset/js/day07/44-event-handling-practice.html
+++ b/asset/js/day07/44-event-handling-practice.html
@@ -9,6 +9,6 @@
  <label for="txtPoint1">Not 1</label> <input type="text" name="" id="txtPoint1"><br>
  <label for="txtPoint2">Not 2</label> <input type="text" name="" id="txtPoint2"><br>
 <button id="btnAverage">Average</button>
-<script src="asset/js/44-event-handling-practice.js"></script>
+<script src="./44-event-handling-practice.js"></script>
 </body>
 </html>
